# periodica

./: .gitignore  CMakeLists.txt  Lattice.cpp  Persistence_image_impl.h  README.md  auxiliary.cpp  auxiliary.h  debug.cpp  debug.h  delaunay.cpp  delaunay.h  emst.cpp  graph_drawing.py  merge_tree.cpp  merge_tree.h  periodica.cpp  persistence_image.cpp  persistence_image.h  test.py
examples/: example_2d_1.txt  example_2d_2.txt  example_3d_1.txt
